# internal/api/services_upload.go
@@ -17,9 +17,16 @@ import (
 	"github.com/photoprism/photoprism/pkg/i18n"
 )
 
-// UploadToService uploads files to the selected account.
+// UploadToService uploads files to the selected service account.
 //
-// GET /api/v1/services/:id/upload
+//	@Summary	uploads files to the selected service account
+//	@Id			UploadToService
+//	@Tags		Services
+//	@Produce	json
+//	@Param		id				path		string	true	"service id"
+//	@Success	200				{object}	entity.Files
+//	@Failure	401,403,404,429	{object}	i18n.Response
+//	@Router		/api/v1/services/{id}/upload [post]
 func UploadToService(router *gin.RouterGroup) {
 	router.POST("/services/:id/upload", func(c *gin.Context) {
 		s := Auth(c, acl.ResourceServices, acl.ActionUpload)
